# ads1256

./: CMakeLists.txt  README.md  ads1256.kdev4
src/: ads1256.cpp  ads1256.h
tests/: ads1256_tests.cpp
